--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,68 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-.classic{
-  background:linear-gradient(0deg, rgba(19, 21, 25, 0.9), rgba(19, 21, 25, 0.9)), #FFFFFF;
+
+.classic {
+  background: linear-gradient(0deg, rgba(19, 21, 25, 0.9), rgba(19, 21, 25, 0.9)), #FFFFFF;
 }
-body{
-    background-color:hwb(0 97% 3%);
-    font-family:'NewYork'
+
+@layer base{
+  textarea::-webkit-scrollbar{
+    display: none;
 }
+}
+
+/* My Classes */
+
+@layer components {
+  .my-title {
+
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 20px;
+
+  }
+
+  .my-paragraph {
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    line-height: 27.50px;
+    
+  }
+
+  .wrap-image {
+    float: right;
+    width: 100px;
+    shape-outside: circle(50%);
+    shape-margin: 1rem;
+  }
+
+  .section {
+    @apply mt-28 mx-4 lg:mx-28
+  }
+  
+  .my-btn {
+    @apply px-6 py-3 active:bg-black active:text-white text-gray-500 active:rounded-full border border-gray-700 rounded-full
+  }
+}
+
+
+body {
+  background-color: hwb(0 97% 3%);
+  font-family: 'NewYork'
+}
+
 ::-webkit-scrollbar-track {
   background-color: red;
   width: 7px;
   height: 30px;
 }
-.scrolli{
-  width:100%;
-  height:100vh;
+
+.scrolli {
+  width: 100%;
+  height: 100vh;
 }
+
 ::-webkit-scrollbar-track-piece {
   background-color: red;
   width: 7px;
@@ -30,410 +76,476 @@ body{
 }
 
 @font-face {
-    font-family: 'NewYork';
-    src: url('./NewYork.otf');
+  font-family: 'NewYork';
+  src: url('./NewYork.otf');
 }
-.arothmatic:hover .dig{
-  color:#fff !important;
+
+.arothmatic:hover .dig {
+  color: #fff !important;
 }
+
 .listing_link li {
   transition: all 2s;
 }
+
 .listing_link li img {
   transition: all 2s;
 }
+
 .listing_link li span {
   transition: all 2s;
 }
+
 @keyframes texi {
-0%{
-  transform:transalteY(10px);
-  opacity:0;
+  0% {
+    transform: transalteY(10px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
 }
-100%{
-  transform:translateY(0px);
-  opacity:1;
+
+.dig {
+  transition: 0.7s;
 }
+
+.arothmatic:hover .dig::before {
+  animation: texi 0.5s 1;
+  content: '';
+  background: #111;
+  color: #fff !important;
+  margin-top: -36px;
+  margin-left: -5px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  z-index: -1;
 }
-.dig{ transition:0.7s;}
-.arothmatic:hover .dig::before{
- animation: texi 0.5s 1;
-  content:'';
-  background:#111;
-  color:#fff !important;
-  margin-top:-36px;
-  margin-left:-5px;
-  width:100px 
-  ; height:100px;
-   border-radius:50%;
-   position:absolute;
-   left:0%;
-   top:0%;
-   z-index:-1;
-}
-.heroImg{
-    background-image:url(./components/hero_desk.png);
-    background-repeat:no-repeat;
-    background-size:cover;
-    width:80%;
-    margin:0px auto;
-    height: 700px;
+
+.heroImg {
+  background-image: url(./components/hero_desk.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 80%;
+  margin: 0px auto;
+  height: 700px;
 
 }
-.vidContainer{
-    transition:width 0.4s ease;
+
+.vidContainer {
+  transition: width 0.4s ease;
 }
+
 .custom-cursor {
-    cursor: url('components/hero_desk.png'), auto;
-   
-  }
-  .contact_png{
-    animation : contact infinite  2s ease-in;
-    height:100px;
-    width:100px;
-    border-radius:50%;
-    position:absolute;
-    right:1.5%;
-    top:-12%;
-    transition: 0.4s ;
-  }
-  @keyframes contact{
-    0%{
-        transform:rotate(75deg);
-        transform:translate(-12%)
-       
-    }25%{
-        transform:rotate(150deg);
-        transform:translate(-52%)
+  cursor: url('components/hero_desk.png'), auto;
 
-       
-    }
-    50%{
-        transform:rotate(225deg);
-       
+}
 
-        
-    }
-    75%{
-        transform:rotate(300deg);
-       
-    }
-    100%{
-        transform:rotate(360deg);
-        
-    }
+.contact_png {
+  animation: contact infinite 2s ease-in;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  position: absolute;
+  right: 1.5%;
+  top: -12%;
+  transition: 0.4s;
+}
+
+@keyframes contact {
+  0% {
+    transform: rotate(75deg);
+    transform: translate(-12%)
   }
 
-  
- 
-  @keyframes scroll {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: -100%;
-    }
+  25% {
+    transform: rotate(150deg);
+    transform: translate(-52%)
   }
-  
-  .animate {
-    animation: scroll 15s linear infinite;
+
+  50% {
+    transform: rotate(225deg);
+
+
+
   }
- 
-.vidContainer{
-  display:block;
-}
-.vidContainer1{
-  display:none;
-}
-.desktop{
-  display:flex;
-}
-.mobile{
-  display:none;
-}
 
-  @media screen and (max-width:768px){
-    .desktop{
-      display:none;
-    }
-    .mobile{
-      display:flex
-    }
-    h2.mobile{
-      display:block;
-      text-align:center;
-      font-size:40px;
-      margin-bottom:20px;
-    }
-    .heroImg{
-      background-image:url(./components/mm.png);
-      background-repeat:no-repeat;
-      background-size:contain;
-      width:100%;
-      height:380px;
-      margin:0px auto;
-      margin-top:10px;
-     
-  
+  75% {
+    transform: rotate(300deg);
+
   }
-  .homeTitle1{
-    font-size:26px;
-    line-height:35px
+
+  100% {
+    transform: rotate(360deg);
+
   }
-  .vidContainer{
-    display:none;
-    width:100%;
-    padding:0px;
-    height:300px;
-    margin-top:0px
+}
+
+
+
+@keyframes scroll {
+  0% {
+    left: 0;
   }
-  .vidContainer1{
-    display:block;
-    width:100%;
-    padding:0px;
-    height:200px;
-    z-index:-1;
-    margin-top:0px;
-    border-radius:10px;
+
+  100% {
+    left: -100%;
   }
-  .vid{
-    border-radius:10px !important;
-    width:95% !important; 
-    margin:0 auto;
-    height:222px !important;
-    margin-top:-55px;
+}
+
+.animate {
+  animation: scroll 15s linear infinite;
+}
+
+.vidContainer {
+  display: block;
+}
+
+.vidContainer1 {
+  display: none;
+}
+
+.desktop {
+  display: flex;
+}
+
+.mobile {
+  display: none;
+}
+
+@media screen and (max-width:768px) {
+  .desktop {
+    display: none;
   }
- .vidContainer1 video{
-  height:300px;
-  z-index:99 !important
- }
-    .homeTitle{
-      font-size:37px;
-      line-height:53px
-    }
-.textSlider{
-  height:200px !important;
-  min-height:400px !important;
 
-}
-.textSlider h2{
-  font-size:50px
-}
+  .mobile {
+    display: flex
+  }
 
-.stilwonder{
-  flex-direction:column;
-  width:96%;
-  margin:0 auto;
-}
-.s_right{
-  width:95% !important;
-  margin:0 auto;
-}
-.s_left{
-  width:95% !important;
-  margin:0 auto;
-}
-.s_left h2{
-  font-size:45px;
-  text-align:center;
-  line-height:40px;
-  margin-bottom:50px
-}
-.s_right p{
-  font-size:16px;
-  line-height:27.52px;
-  text-align:center
-}
-.classic{
-  flex-direction:column;
-}
-.forthWrap{
-  flex-direction:column-reverse;
-   width:100%;
-   
-  margin:0 auto;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-.mobile_dev {
-  width:100%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:460px
+  h2.mobile {
+    display: block;
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 20px;
+  }
 
-}
-.right_fourth{
-  width:100%;
-  padding-left: 20px;
-  margin-bottom:80px;
-}
+  .heroImg {
+    background-image: url(./components/mm.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 380px;
+    margin: 0px auto;
+    margin-top: 10px;
 
-.right_fourth h4{
-  font-size:20px;
-}
-.right_fourth h2{
-  font-size:40px;
-  line-height:40px;
-  font-weight:400
-}
-.left_fourth img{
-  position:relative;
-  width:80%;
-}
 
-.left_fourth{
-  position:relative;
-  width:95%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  margin:0 auto;
+  }
 
-}
-.secSix{
-  flex-direction:column-reverse;
-  display:flex;
+  .homeTitle1 {
+    font-size: 26px;
+    line-height: 35px
+  }
 
-}
-.left_six{
-  width:100%;
-  padding-left:15px;
-}
-.left_six h2{
-  font-size:35px;
-  margin-top:20px;
-  line-height:40px;
-}
-.left_six p{
-  padding-right:7px;
- 
-}
-.right_six img{
-  height:222px;
-  width:100%;
-  border-radius:10px;
-}
-.right_six {
-  width:95%;
-  margin:0 auto;
-  height:222px;
-}
-.wonderWrapper{
-  flex-direction:column
-}
-.wonderWrapper .left_fourth img{
-  width:40px;
-  height:40px;
-}
-.wonderWrapper .left_fourth .bg-white{
-  width:100%;
-  margin:0 auto;
-}
-.learro img{
-  height:16px !important;
-}
-.wmw{
-  margin-top:0px !important;
-  padding-top:0px !important;
-}
-.pbb{
-  padding-bottom:0px;
-}
-.wemakeWrap{
-  flex-direction:column-reverse;
-  margin-top:-30px;
-  width:95%;
-  margin:0 auto;
-  margin:0px
-}
-.wemakeWrap h2{
-  text-align:center;
-  font-size:40px;
-  line-height:40px;
-}
-.wemakeWrap .right_fourth {
-  width:100% !important;
-}
-.wemakeWrap p{
-  font-size:16px;
-  font: weight 400px;
-  text-align:center;
-  line-height:27.52px;
-}
-.circleBottom{
-  width: 379px;
-  height:379px;
-}
-.circleBottom h4{
-  font-size:40px !important;
-  line-height: 50px;
-}
-.footer , footer{
-  flex-direction:column;
-  height:200px !important;
-  width:95%;
-  padding:6px
-}
-.linksk{
-  justify-content:center
-}.border-rr{
-  border-right:none;
-  display:flex;
-  justify-content:center;
-  width:100%;
+  .vidContainer {
+    display: none;
+    width: 100%;
+    padding: 0px;
+    height: 300px;
+    margin-top: 0px
+  }
 
-  padding-top:10px
-}
-.fwid{
-  width:100% !important
-  ; margin:0px !important;
-  padding-top:4px !important;
-  height:40px !important
+  .vidContainer1 {
+    display: block;
+    width: 100%;
+    padding: 0px;
+    height: 200px;
+    z-index: -1;
+    margin-top: 0px;
+    border-radius: 10px;
+  }
 
-}
-.nav_right_content ul{
-  display:flex;
-  flex-direction:column;
-  justify-content: center;
-  align-items:center;
-  width:100%
+  .vid {
+    border-radius: 10px !important;
+    width: 95% !important;
+    margin: 0 auto;
+    height: 222px !important;
+    margin-top: -55px;
+  }
 
-}
-.nav_right_content1 ul{
-  flex-direction:column;
-  padding-left:0px;
-  width:100%;
-  height:180px !important;
-  padding-bottom:50px;
-}
-.nav_right_content1 ul li a{
-  font-size:50px
-}
-.nav_right_content1{
-  position:absolute;
-  padding:5px 10px ;
-  border-radius:19px;
-  width:100%;
-  height:700px;
-  left:0%;
-  flex-direction:column;
-  top:3%;
-  background:#e9e9e9e4;
-  -webkit-backdrop-filter: blur(34px) !important;
-  backdrop-filter: blur(34px) !important;
-  height:700px;
-  z-index:99991 !important
-}
-.nav_left_content span{
-  font-size:15px !important;
-  font-family:normal
+  .vidContainer1 video {
+    height: 300px;
+    z-index: 99 !important
+  }
 
-}
+  .homeTitle {
+    font-size: 37px;
+    line-height: 53px
+  }
 
-/* .navMain .nav_right_content , .nav_left_content{
+  .textSlider {
+    height: 200px !important;
+    min-height: 400px !important;
+
+  }
+
+  .textSlider h2 {
+    font-size: 50px
+  }
+
+  .stilwonder {
+    flex-direction: column;
+    width: 96%;
+    margin: 0 auto;
+  }
+
+  .s_right {
+    width: 95% !important;
+    margin: 0 auto;
+  }
+
+  .s_left {
+    width: 95% !important;
+    margin: 0 auto;
+  }
+
+  .s_left h2 {
+    font-size: 45px;
+    text-align: center;
+    line-height: 40px;
+    margin-bottom: 50px
+  }
+
+  .s_right p {
+    font-size: 16px;
+    line-height: 27.52px;
+    text-align: center
+  }
+
+  .classic {
+    flex-direction: column;
+  }
+
+  .forthWrap {
+    flex-direction: column-reverse;
+    width: 100%;
+
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mobile_dev {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 460px
+  }
+
+  .right_fourth {
+    width: 100%;
+    padding-left: 20px;
+    margin-bottom: 80px;
+  }
+
+  .right_fourth h4 {
+    font-size: 20px;
+  }
+
+  .right_fourth h2 {
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 400
+  }
+
+  .left_fourth img {
+    position: relative;
+    width: 80%;
+  }
+
+  .left_fourth {
+    position: relative;
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+
+  }
+
+  .secSix {
+    flex-direction: column-reverse;
+    display: flex;
+
+  }
+
+  .left_six {
+    width: 100%;
+    padding-left: 15px;
+  }
+
+  .left_six h2 {
+    font-size: 35px;
+    margin-top: 20px;
+    line-height: 40px;
+  }
+
+  .left_six p {
+    padding-right: 7px;
+
+  }
+
+  .right_six img {
+    height: 222px;
+    width: 100%;
+    border-radius: 10px;
+  }
+
+  .right_six {
+    width: 95%;
+    margin: 0 auto;
+    height: 222px;
+  }
+
+  .wonderWrapper {
+    flex-direction: column
+  }
+
+  .wonderWrapper .left_fourth img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .wonderWrapper .left_fourth .bg-white {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .learro img {
+    height: 16px !important;
+  }
+
+  .wmw {
+    margin-top: 0px !important;
+    padding-top: 0px !important;
+  }
+
+  .pbb {
+    padding-bottom: 0px;
+  }
+
+  .wemakeWrap {
+    flex-direction: column-reverse;
+    margin-top: -30px;
+    width: 95%;
+    margin: 0 auto;
+    margin: 0px
+  }
+
+  .wemakeWrap h2 {
+    text-align: center;
+    font-size: 40px;
+    line-height: 40px;
+  }
+
+  .wemakeWrap .right_fourth {
+    width: 100% !important;
+  }
+
+  .wemakeWrap p {
+    font-size: 16px;
+    font: weight 400px;
+    text-align: center;
+    line-height: 27.52px;
+  }
+
+  .circleBottom {
+    width: 379px;
+    height: 379px;
+  }
+
+  .circleBottom h4 {
+    font-size: 40px !important;
+    line-height: 50px;
+  }
+
+  .footer, footer {
+    flex-direction: column;
+    height: 200px !important;
+    width: 95%;
+    padding: 6px
+  }
+
+  .linksk {
+    justify-content: center
+  }
+
+  .border-rr {
+    border-right: none;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    padding-top: 10px
+  }
+
+  .fwid {
+    width: 100% !important;
+    margin: 0px !important;
+    padding-top: 4px !important;
+    height: 40px !important
+  }
+
+  .nav_right_content ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%
+  }
+
+  .nav_right_content1 ul {
+    flex-direction: column;
+    padding-left: 0px;
+    width: 100%;
+    height: 180px !important;
+    padding-bottom: 50px;
+  }
+
+  .nav_right_content1 ul li a {
+    font-size: 50px
+  }
+
+  .nav_right_content1 {
+    position: absolute;
+    padding: 5px 10px;
+    border-radius: 19px;
+    width: 100%;
+    height: 700px;
+    left: 0%;
+    flex-direction: column;
+    top: 3%;
+    background: #e9e9e9e4;
+    -webkit-backdrop-filter: blur(34px) !important;
+    backdrop-filter: blur(34px) !important;
+    height: 700px;
+    z-index: 99991 !important
+  }
+
+  .nav_left_content span {
+    font-size: 15px !important;
+    font-family: normal
+  }
+
+  /* .navMain .nav_right_content , .nav_left_content{
   display:none
 }  */
 
-  }
+}
