--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,16 @@
 
   }
 
+  .my-h-title {
+
+    font-size: 24px;
+    text-align: start;
+    margin-bottom: 0.6rem;
+    font-family: sans-serif;
+    margin-top: 1.5em;
+
+  }
+
   .my-paragraph {
     font-size: 16px;
     font-family: 'Inter', sans-serif;
